--- a/example/1-cart.html
+++ b/example/1-cart.html
@@ -22,21 +22,29 @@
 
   const add = (a, b) => a + b;
 
-  const sum = (f, iter) => go(
+  const sum = curry((f, iter) => go(
     iter,
     map(f), // 이 부분을 완전히 위임
-    reduce(add));
+    reduce(add)));
 
   // 합산 재고 만들어보기
-  const total_quantity = products => sum(p => p.quantity, products);
+  const total_quantity = sum(p => p.quantity);
 
   log(total_quantity(products));
 
 
   // 합산 금액 만들어보기
-  const total_price = products => sum(p => p.price * p.quantity, products);
+  const total_price = sum(p => p.price * p.quantity);
 
   log(total_price(products));
+
+
+  // sum의 활용, 장바구니에 국한되는 함수가 아님!
+  log(sum(u => u.age, [
+    { age: 30 },
+    { age: 20 },
+    { age: 10 },
+  ]));
 </script>
 
 </body>
