6. HTML 출력해보기 - 장바구니 (6)
이전 과정에서 구한 `total_quantity`와 `total_price` 를 적용한다.

--- a/example/1-cart.html
+++ b/example/1-cart.html
@@ -68,8 +68,8 @@
       </tr>
       <tr>
         <td colspan="2">합계</td>
-        <td>6</td>
-        <td>60000</td>
+        <td>${total_quantity(products)}</td>
+        <td>${total_price(products)}</td>
       </tr>
     </table>
   `
