--- a/07_지연성/1.html
+++ b/07_지연성/1.html
@@ -20,7 +20,7 @@
     let i = -1;
     let res = [];
     while (++i < l) {
-      log(i, 'range');
+      // log(i, 'range');
       res.push(i);
     }
     return res;
@@ -44,10 +44,10 @@
   const L = {};
 
   L.range = function *(l) {
-    log('hi~~');
+    // log('hi~~');
     let i = -1;
     while (++i < l) {
-      log(i, 'L.range');
+      // log(i, 'L.range');
       yield i;
     }
   };
@@ -60,5 +60,20 @@
   log(list.next());
   // log(reduce(add, list));
 </script>
+
+## range와 느긋한 L.range 테스트
+<script>
+  log('===== range와 느긋한 L.range 테스트 =====');
+
+  function test(name, time, f) {
+    console.time(name);
+    while (time--) f();
+    console.timeEnd(name);
+  }
+
+  test('range', 10, () => reduce(add, range(1_000_000)));
+  test('L.range', 10, () => reduce(add, L.range(1_000_000)));
+</script>
 </body>
+
 </html>
