--- a/07-lazy-evaluation/05-reduce-take.html
+++ b/07-lazy-evaluation/05-reduce-take.html
@@ -5,8 +5,7 @@
 ### reduce
 <script>
   // 이러한 방식으로 사고하는 것을 익혀야 한다!
-  const queryStr = obj => go(
-    obj,
+  const queryStr = pipe(
     Object.entries,
     map(([k, v]) => `${k}=${v}`),
     reduce((a, b) => `${a}&${b}`)
