07. 지연성 - L.map, L.filter로 map과 filter 만들기 (3)
pipe로 변경

--- a/07-lazy-evaluation/06-make-map-and-filter-by-L.map-and-L.filter.html
+++ b/07-lazy-evaluation/06-make-map-and-filter-by-L.map-and-L.filter.html
@@ -23,10 +23,7 @@ L.map, L.filter로 map과 filter 만들기
   }
 
   // L.map을 사용하여 구현한 map
-  const _map = curry((f, iter) => go(
-    L.map(f, iter),
-    take(Infinity),
-  ));
+  const _map = curry(pipe(L.map, take(Infinity)));
 
   log(_map(a => a + 10, L.range(4)));
 </script>
