07. 지연성 - L.map, L.filter로 map과 filter 만들기 (6)
디버깅을 위해 풀어서 서술한 코드 축약

--- a/07-lazy-evaluation/06-make-map-and-filter-by-L.map-and-L.filter.html
+++ b/07-lazy-evaluation/06-make-map-and-filter-by-L.map-and-L.filter.html
@@ -3,10 +3,7 @@
 ### L.map으로 map 만들기
 <script>
   L.map = curry(function *(f, iter) {
-    iter = iter[Symbol.iterator]();
-    let cur;
-    while (!(cur = iter.next()).done) {
-      const a = cur.value;
+    for (const a of iter) {
       yield f(a);
     }
   });
@@ -33,10 +30,7 @@
 ### L.filter로 filter 만들기
 <script>
   L.filter = curry(function *(f, iter) {
-    iter = iter[Symbol.iterator]();
-    let cur;
-    while (!(cur = iter.next()).done) {
-      const a = cur.value;
+    for (const a of iter) {
       if (f(a)) yield a;
     }
   })
