07. 지연성 - L.flatten, flatten (2)
yield * 사용하여 코드 축약

--- a/07-lazy-evaluation/07-flatten-and-L.flatten.html
+++ b/07-lazy-evaluation/07-flatten-and-L.flatten.html
@@ -9,7 +9,7 @@
 
   L.flatten = function *(iter) {
     for (const a of iter) {
-      if (isIterable(a)) for (const b of a) yield b;
+      if (isIterable(a)) yield *a;
       else yield a;
     }
   };
