07. 지연성 - L.flatten, flatten (3)
L.deepFlat 추가

--- a/07-lazy-evaluation/07-flatten-and-L.flatten.html
+++ b/07-lazy-evaluation/07-flatten-and-L.flatten.html
@@ -25,6 +25,18 @@
       L.flatten([[1, 2], 3, 4, [5, 6], [7, 8, 9]])));
 </script>
 
+## L.deepFlat
+<script>
+  L.deepFlat = function *f(iter) {
+    for (const a of iter) {
+      if (isIterable(a)) yield *f(a);
+      else yield a;
+    }
+  };
+
+  log([...L.deepFlat([1, [2, [3, 4], [[5]]]])]);
+</script>
+
 ## flatten
 - L.flatten으로 쉽게 flatten을 만들 수 있다.
 <script>
