08. 비동기, 동시성 프로그래밍 - 비동기를 값으로 만드는 Promise

--- a/08-asynchronous-and-concurrency/01-callback-and-promise.html
+++ b/08-asynchronous-and-concurrency/01-callback-and-promise.html
@@ -11,13 +11,15 @@
   /**
    * 콜백 패턴은 함수의 depth가 늘어나기 때문에 가독성이 떨어진다는 단점이 있다.
    */
-  add10(5, res => {
+  const a = add10(5, res => {
     add10(res, res => {
       add10(res, res => {
         log(res);
       });
     });
   });
+
+  log(a); // undefined
 
   // Promise
   function add20(a) {
@@ -26,10 +28,23 @@
   }
 
   /**
-   * 프로미스는 간단한 구문으로 연속적으로 실행할 수 있다.
+   * 프로미스 콜백에 비해 구문이 단순한 편이지만, 이게 콜백과 가장 큰 차이는 아니다.
+   * "비동기 상황을 일급 값으로 다룬다"는 것이 콜백과 가장 큰 차이점이다.
+   * 프로미스라는 클래스를 통해 만들어진 인스턴스를 반환하는데, 그 값은 대기/성공/실패를 다루는 "일급 값"으로 이루어져 있다.
+   * 대기와 일을 끝내는 것을 코드나 컨텍스트로 다루는 것이 아니라, 대기하고 있다는 값을 만든다는 점에서 콜백과 가장 큰 차이가 있다.
+   * 이 점이 가장 중요하다!
    */
-  add20(5)
+  const b = add20(5)
     .then(add20)
     .then(add20)
     .then(log);
+
+  log(b); // Promise라는 값이 출력된다.
+
+  /**
+   * `add10`은 실행하고 나면 어떤 일도 할 수 없다.
+   * `add20`을 평가하면 그 즉시 Promise가 리턴된다. 따라서 이후에 추가적인 작업이 가능하다.
+   * 즉, 비동기 상황을 값으로 다룰 수 있다는 것이다. 이런 것을 "일급"이라고 한다.
+   * 일급이라는 것은 어떤 변수에 할당될 수 있고, 함수로 전달될 수 있고, 전달된 값을 가지고 어떤 일들을 이어갈 수 있다는 점이 중요하다.
+   */
 </script>
