--- a/08-asynchronous-and-concurrency/02-promise-and-monad.html
+++ b/08-asynchronous-and-concurrency/02-promise-and-monad.html
@@ -1,7 +1,7 @@
 <script src="../lib/fx.js"></script>
 
 ## Composition
-<script>
+<script type="module">
   /**
    * 함수 합성 관점에서의 Promise
    * Promise는 비동기 상황에서 함수 합성을 안전하게 하기 위한 도구라고 볼 수 있다.
@@ -54,4 +54,46 @@
    * 비동기 상황에서의 합성을 안전하게 하려는 성질을 가지고 있다.
    * delay가 있는 상황에서도 적절한 시점에 함수를 합성할 수 있도록 하는 도구가 Promise이다.
    */
+</script>
+
+## Kleisli Composition
+<script type="module">
+  console.clear();
+  /**
+   * Promise는 Kleisli Composition을 지원하는 도구이다.
+   * Kleisli Composition 혹은 Kleisli Arrow 라고 하는 함수 합성 방법은 오류가 있을 수 있는 상황에서의 함수 합성을 안전하게 하는 하나의 규칙이라고 보면 간단하다.
+   */
+
+  /**
+   * f . g
+   * f(g(x)) = f(g(x)) -- x가 같다면 어느 시점에 평가되어도 값이 동일하다.
+   *
+   * f(g(x)) = f(g(x)) 에서 오류가 발생할 경우 순수한 함수형 프로그래밍을 할 수 없다.
+   * 그런 상황에서도 특정한 규칙을 만들어서 합성을 안전하게 만들고 이것을 조금 더 수학적으로 바라볼 수 있게하는 함수 합성이 Kleisli Composition이다.
+   *
+   * f(g(x)) = g(x)
+   */
+
+  const users = [
+    { id: 1, name: 'aa' },
+    { id: 2, name: 'bb' },
+    { id: 3, name: 'cc' },
+  ];
+
+  const getUserById = id =>
+    find(u => u.id === id, users);
+
+  const f = ({ name }) => name;
+  const g = getUserById;
+  const fg = id => f(g(id));
+
+  const r = fg(2);
+  log(r);
+
+  // 외부 세상에 변화가 발생
+  users.pop();
+  users.pop();
+
+  const r2 = fg(2);
+  log(r2);
 </script>
