--- a/08-asynchronous-and-concurrency/05-lazy-evaluation-with-promise-and-kleisli-composition.html
+++ b/08-asynchronous-and-concurrency/05-lazy-evaluation-with-promise-and-kleisli-composition.html
@@ -30,7 +30,32 @@
 
 ## Kleisli Composition - L.filter, filter, nop, take
 <script>
+  console.clear();
 
+  go([1, 2, 3, 4, 5, 6],
+    L.map(a => Promise.resolve(a * a)),
+    L.filter(a => a % 2),
+    // L.filter(a => {
+    //   log(a); // filter에 넘어오는 값이 Promise라 정상적으로 작동하지 않는다.
+    //   return a % 2;
+    // }),
+    take(4),
+    log)
+</script>
+
+## Kleisli Composition - L.filter, filter, nop, take
+<script>
+  console.clear();
+
+  go([1, 2, 3, 4, 5, 6],
+    L.map(a => Promise.resolve(a * a)),
+    L.filter(a => a % 2),
+    // L.filter(a => {
+    //   log(a); // filter에 넘어오는 값이 Promise라 정상적으로 작동하지 않는다.
+    //   return a % 2;
+    // }),
+    take(4),
+    log)
 </script>
 
 ## reduce에서 nop 지원
