08. 비동기, 동시성 프로그래밍 - reduce에서 nop 지원 (2)

--- a/08-asynchronous-and-concurrency/05-lazy-evaluation-with-promise-and-kleisli-composition.html
+++ b/08-asynchronous-and-concurrency/05-lazy-evaluation-with-promise-and-kleisli-composition.html
@@ -60,9 +60,10 @@
 
 ## reduce에서 nop 지원
 <script>
-  go([1, 2, 3, 4],
+  go([1, 2, 3, 4, 5],
     L.map(a => Promise.resolve(a * a)),
     L.filter(a => Promise.resolve(a % 2)),
     reduce(add),
-    log)
+    log);
+  //  1 9 25 = 35
 </script>
