--- a/08-asynchronous-and-concurrency/06-C.reduce-C.take-C.map-C.filter.html
+++ b/08-asynchronous-and-concurrency/06-C.reduce-C.take-C.map-C.filter.html
@@ -17,6 +17,12 @@
 
   C.take = curry((l, iter) => take(l, catchNoop([...iter])));
 
+  C.takeAll = C.take(Infinity);
+
+  C.map = curry(pipe(L.map, C.takeAll));
+
+  C.filter = curry(pipe(L.filter, C.takeAll));
+
   // reduce를 하지 않았을 때 delay500에 함수가 들어오는지 확인
   const delay1000 = a => new Promise(resolve => {
     log('heavy io');
@@ -40,7 +46,7 @@
     /*log,
     _ => console.timeEnd('C')*/);
 
-  console.time('C2');
+  // console.time('C2');
   go([1, 2, 3, 4, 5, 6, 7, 8, 9],
     L.map(a => delay1000(a * a)),
     L.filter(a => a % 2),
@@ -48,6 +54,12 @@
     // take(2),
     C.take(2), // 최대한의 자원을 사용해서 결과를 빨리 꺼내고 싶을 때 사용한다.
     C.reduce(add),
-    log,
-    _ => console.timeEnd('C2'));
+    /*log,
+    _ => console.timeEnd('C2')*/);
+</script>
+
+## 즉시 병렬적으로 평가하기 - C.map, C.filter
+<script>
+  C.map(a => delay1000(a * a), [1, 2, 3, 4]).then(log);
+  C.filter(a => delay1000(a * a), [1, 2, 3, 4]).then(log);
 </script>
