08. 비동기, 동시성 프로그래밍 - 코드 간단히 정리 (1)

--- a/08-asynchronous-and-concurrency/06-C.reduce-C.take-C.map-C.filter.html
+++ b/08-asynchronous-and-concurrency/06-C.reduce-C.take-C.map-C.filter.html
@@ -8,12 +8,9 @@
   const catchNoop = arr =>
     (arr.forEach(a => a instanceof Promise ? a.catch(noop) : a), arr);
 
-  C.reduce = curry((f, acc, iter) => {
-    const iter2 = catchNoop(iter ? [...iter] : [...acc]);
-    return iter
-      ? reduce(f, acc, iter2)
-      : reduce(f, iter2)
-  });
+  C.reduce = curry((f, acc, iter) => iter
+      ? reduce(f, acc, catchNoop([...iter]))
+      : reduce(f, catchNoop([...acc])));
 
   C.take = curry((l, iter) => take(l, catchNoop([...iter])));
 
