--- a/08-asynchronous-and-concurrency/08-QnA.html
+++ b/08-asynchronous-and-concurrency/08-QnA.html
@@ -58,3 +58,44 @@
   }
 </script>
 
+
+## 이제 비동기는 async/await로 제어할 수 있는데 왜 파이프라인이 필요한지?
+- 파이프라인과 async/await은 목적이 다르다.
+  - 파이프라인을 사용한 프로그래밍은 비동기 프로그래밍을 하는 것이 아니라, 명령형 프로그래밍을 하지 않고 안전한 함수 합성을 하기 위한 것이 목표이다.
+  - async/await은 프로미스 함수 체인이 아니라 문장형으로 표현하는 것에 목적이 있다. (비동기를 동기적으로 작성)
+- 즉, 파이프라인은 합성을 위함이고, async/await은 풀어놓으려는 목적이다. 비교 대상이 아니라 다른 문제에 대한 해결책이다.
+<script>
+  const list = [1, 2, 3, 4, 5, 6, 7, 8];
+
+  // delayI 함수에서 즉시 값이 떨어진다고 해도 결과값은 동일하다.
+  function f6(list) {
+    return go(list,
+      L.map(a => delayI(a * a)),
+      L.filter(a => delayI(a % 2)),
+      L.map(a => delayI(a + 1)),
+      take(3),
+      reduce((a, b) => delayI(a + b)));
+  }
+  go(f6(list), log);
+
+  // f6을 명령형으로 작성하고, async/await 적용
+  // delayI에서 즉시 값이 떨어져도 결과 값은 Promise이다.
+  async function f7(list) {
+    const temp = [];
+    for (const a of list) {
+      const b = await delayI(a * a);
+      if (await delayI(b % 2)) {
+        const c = await delayI(b + 1);
+        temp.push(c);
+        if (temp.length === 3) break;
+      }
+    }
+    let res = temp[0] ?? 0;
+    let i = 0;
+    while (++i < temp.length) {
+      res = await delayI(res + temp[i]);
+    }
+    return res;
+  }
+  go(f7(list), log);
+</script>
