--- a/08-asynchronous-and-concurrency/08-QnA.html
+++ b/08-asynchronous-and-concurrency/08-QnA.html
@@ -99,3 +99,25 @@
   }
   go(f7(list), log);
 </script>
+
+## async/await와 파이프라인을 같이 사용하기도 하는지?
+- 함께 사용하면 복수 개의 비동기 로직을 간단하게 작성할 수 있다.
+<script>
+  async function f8(list) {
+    const r1 = await go(list,
+      L.map(a => delayI(a * a)),
+      L.filter(a => delayI(a % 2)),
+      L.map(a => delayI(a + 1)),
+      take(3),
+      reduce((a, b) => delayI(a + b)));
+
+    const r2 = await go(list ,
+      L.map(a => delayI(a * a)),
+      L.filter(a => delayI(a % 2)),
+      reduce((a, b) => delayI(a + b)));
+
+    const r3 = await delayI(r1 + r2);
+    return r3 + 10;
+  }
+  go(f8(list), log);
+</script>
