08. 비동기, 동시성 프로그래밍 - QnA (4)
동기 상황에서 에러 핸들링은 어떻게 해야하는지?

--- a/08-asynchronous-and-concurrency/08-QnA.html
+++ b/08-asynchronous-and-concurrency/08-QnA.html
@@ -121,3 +121,28 @@
   }
   go(f8(list), log);
 </script>
+
+## 동기 상황에서 에러 핸들링은 어떻게 해야하는지?
+<script>
+  function f9(list) {
+    try {
+      return list
+        .map(a => a + 10)
+        // .map(a => JSON.parse(a))
+        .filter(a => a % 2)
+        .slice(0, 2);
+    } catch (e) {
+      return [];
+    }
+  }
+  log(f9([1, 2, 3, 4, 5, 6, 7, 8])); // 정상 동작
+
+  log(f9([])); // 값이 비어있을 땐 문제 없이 흘려보낸다
+
+  log(f9(null));
+  /***
+   * 에러를 그냥 뿜게 할 수도 있고, 비슷한 상황이라면 try catch로 []를 리턴하도록 할 수 있다.
+   * 주의할 점은 인자 list의 값이 잘못된 경우와 파이파라인 내 함수의 보조함수가 잘못된 경우에도 같은 catch에 걸린다.
+   * 경우에 따라 오류를 뿜게 할건지 핸들링할건지 선택해야 한다.
+   */
+</script>
