08. 비동기, 동시성 프로그래밍 - QnA (5)
비동기 상황에서 에러 핸들링은 어떻게 해야하는지?

--- a/08-asynchronous-and-concurrency/08-QnA.html
+++ b/08-asynchronous-and-concurrency/08-QnA.html
@@ -59,7 +59,7 @@
 </script>
 
 
-## 이제 비동기는 async/await로 제어할 수 있는데 왜 파이프라인이 필요한지?
+## QnA. 이제 비동기는 async/await로 제어할 수 있는데 왜 파이프라인이 필요한지?
 - 파이프라인과 async/await은 목적이 다르다.
   - 파이프라인을 사용한 프로그래밍은 비동기 프로그래밍을 하는 것이 아니라, 명령형 프로그래밍을 하지 않고 안전한 함수 합성을 하기 위한 것이 목표이다.
   - async/await은 프로미스 함수 체인이 아니라 문장형으로 표현하는 것에 목적이 있다. (비동기를 동기적으로 작성)
@@ -100,7 +100,7 @@
   go(f7(list), log);
 </script>
 
-## async/await와 파이프라인을 같이 사용하기도 하는지?
+## QnA. async/await와 파이프라인을 같이 사용하기도 하는지?
 - 함께 사용하면 복수 개의 비동기 로직을 간단하게 작성할 수 있다.
 <script>
   async function f8(list) {
@@ -122,7 +122,7 @@
   go(f8(list), log);
 </script>
 
-## 동기 상황에서 에러 핸들링은 어떻게 해야하는지?
+## QnA. 동기 상황에서 에러 핸들링은 어떻게 해야하는지?
 <script>
   function f9(list) {
     try {
@@ -145,4 +145,26 @@
    * 주의할 점은 인자 list의 값이 잘못된 경우와 파이파라인 내 함수의 보조함수가 잘못된 경우에도 같은 catch에 걸린다.
    * 경우에 따라 오류를 뿜게 할건지 핸들링할건지 선택해야 한다.
    */
+</script>
+
+## QnA. 비동기 상황에서 에러 핸들링은 어떻게 해야하는지?
+<script>
+  function f10(list) {
+    try {
+      return list
+        .map(a => new Promise(resolve => {
+          resolve(JSON.parse(a))
+        }))
+        .filter(a => a % 2)
+        .slice(0, 2);
+    } catch (e) {
+      log(e, '-------------'); // 여기로 오지 않음
+      return [];
+    }
+  }
+  log(f10(['0', '1', '2', '{']));
+
+  f10(['0', '1', '2', '{']).then(log).catch(e => {
+    log('에러 핸들링! but 여기 안 걸림');
+  });
 </script>
