09. 이터러블 프로그래밍 혹은 리스트 프로세싱 - 값 변화 후 변수 할당을 map으로

--- a/09-iterable-or-list-processing/01-sum-of-squares-of-odd-number.html
+++ b/09-iterable-or-list-processing/01-sum-of-squares-of-odd-number.html
@@ -21,9 +21,8 @@ f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
 // 함수형으로 변환
 function f2(limit, list) {
   let acc = 0;
-  for (const a of L.filter(a => a % 2, list)) {
-    const b = a * a;
-    acc += b
+  for (const a of L.map(a => a * a, L.filter(a => a % 2, list))) {
+    acc += a;
     if (--limit === 0) break;
   }
   console.log(acc);
