--- a/09-iterable-or-list-processing/01-sum-of-squares-of-odd-number.html
+++ b/09-iterable-or-list-processing/01-sum-of-squares-of-odd-number.html
@@ -21,7 +21,7 @@ f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
 // 함수형으로 변환
 function f2(limit, list) {
   let acc = 0;
-  for (const a of L.map(a => a * a, L.filter(a => a % 2, list))) {
+  for (const a of L.take(limit, L.map(a => a * a, L.filter(a => a % 2, list)))) {
     acc += a;
     if (--limit === 0) break;
   }
