09. 이터러블 프로그래밍 혹은 리스트 프로세싱 - 축약 및 합산을 reduce로

--- a/09-iterable-or-list-processing/01-sum-of-squares-of-odd-number.html
+++ b/09-iterable-or-list-processing/01-sum-of-squares-of-odd-number.html
@@ -19,13 +19,14 @@ function f1(limit, list) {
 f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
 
 // 함수형으로 변환
+const add = (a, b) => a + b;
+
 function f2(limit, list) {
-  let acc = 0;
-  for (const a of L.take(limit, L.map(a => a * a, L.filter(a => a % 2, list)))) {
-    acc += a;
-    if (--limit === 0) break;
-  }
-  console.log(acc);
+  console.log(
+    _.reduce(add,
+      L.take(limit,
+        L.map(a => a * a,
+          L.filter(a => a % 2, list)))));
 }
 f2(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
 </script>
