--- a/09-iterable-or-list-processing/01-sum-of-squares-of-odd-number.html
+++ b/09-iterable-or-list-processing/01-sum-of-squares-of-odd-number.html
@@ -22,11 +22,12 @@ f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
 const add = (a, b) => a + b;
 
 function f2(limit, list) {
-  console.log(
-    _.reduce(add,
-      L.take(limit,
-        L.map(a => a * a,
-          L.filter(a => a % 2, list)))));
+  _.go(list,
+    L.filter(a => a % 2),
+    L.map(a => a * a),
+    L.take(limit),
+    _.reduce(add),
+    console.log);
 }
 f2(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
 </script>
