--- a/10-break-imperative-thinking/01-no-reduce-all-around.html
+++ b/10-break-imperative-thinking/01-no-reduce-all-around.html
@@ -67,6 +67,19 @@
   };
   // a=1&c=CC&d=DD
 
+  // 내가 짠 코드
+  const join = _.curry((sep, iter) => 
+    _.reduce((a, b) => `${a}${sep}${b}`, iter));
+
+  function query0(obj) {
+    return _.go(
+      Object.entries(obj),
+      L.filter(([k, v]) => v),
+      L.map(([k, v]) => `${k}=${v}`),
+      join('&'));
+  }
+  console.log(query0(obj1));
+
   // 명령형 코드
   function query1(obj) {
     let res = '';
@@ -90,6 +103,22 @@
       }, '');
   }
   console.log(query2(obj1));
+
+  // 더 나은 방법
+  const query3 = obj =>
+    join('&',
+      _.map(([k, v]) => `${k}=${v}`,
+        _.reject(([_, v]) => v === undefined,
+          Object.entries(obj))));
+  console.log(query3(obj1));
+
+  const query4 = obj => _.go(
+    obj,
+    Object.entries,
+    _.reject(([_, v]) => v === undefined),
+    _.map(([k, v]) => `${k}=${v}`),
+    join('&'));
+  console.log(query4(obj1));
 </script>
 </body>
 </html>
