10. 명령형 습관 지우기 - query3, query4 (2)
pipe로 축약

--- a/10-break-imperative-thinking/01-no-reduce-all-around.html
+++ b/10-break-imperative-thinking/01-no-reduce-all-around.html
@@ -112,8 +112,7 @@
           Object.entries(obj))));
   console.log(query3(obj1));
 
-  const query4 = obj => _.go(
-    obj,
+  const query4 = _.pipe(
     Object.entries,
     _.reject(([_, v]) => v === undefined),
     _.map(([k, v]) => `${k}=${v}`),
